--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "analyze": "yarn-or-npm build:with-stats && yarn-or-npm start:analyzer",
     "build": "cross-env NODE_ENV=production TS_NODE_PROJECT=tsconfig.tooling.json ts-node scripts/build",
+    "start:build": "node build/server/server.js",
     "build:with-stats": "cross-env NODE_ENV=production TS_NODE_PROJECT=tsconfig.tooling.json webpack --config config/webpack.config.ts/client.prod.ts --json > build/client/static/bundle-stats.json",
     "clean:transpiled": "rimraf build/transpiled",
     "depgraph": "depcruise -c .dependency-cruiser.js --exclude \"node_modules/*\" --output-type dot src | dot -T svg > dependency-graph.svg",
@@ -53,6 +54,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "rimraf": "^3.0.2",
@@ -95,6 +97,8 @@
     "@types/react-redux": "^7.1.8",
     "@types/react-router": "^5.1.7",
     "@types/react-router-dom": "^5.1.5",
+    "@types/redux-logger": "^3.0.7",
+    "@types/redux-mock-store": "^1.0.2",
     "@types/rimraf": "^3.0.0",
     "@types/terser-webpack-plugin": "^2.2.0",
     "@types/webpack": "^4.41.12",
@@ -108,12 +112,16 @@
     "@werkzeugkiste/eslint-config": "^2.0.0",
     "@werkzeugkiste/prettier-config": "^2.0.0",
     "autoprefixer": "^9.7.6",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-macros": "^2.8.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "browserslist": "^4.12.0",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "concurrently": "^5.2.0",
